--- a/inclui.html
+++ b/inclui.html
@@ -4,7 +4,9 @@
 <body>
     <header>
         <div class="top">
-            <h2><b>Laccio di Batte</b></h2>
+            <a href="index.php">
+                <h2><b>Laccio di Batte</b></h2>
+            </a>
             <div class="line-container">
                 <h4>Sofia Werneck</h4>
                 <div class="line"></div>
@@ -19,7 +21,6 @@
             <div class="questions">
                 <form method="post" id="form" action="salva.php">
                     <input type="hidden" name="id_pedido">
-                    <input type="hidden" value="pm">
                     <label for="tipo">Tamanho Gelato</label>
                     <select name="tipo" id="tipo">
                         <option value="P">P</option>
@@ -100,5 +101,8 @@
         .container h3{text-align: center; font-family: 'Montserrat', sans-serif;font-size: 28px;}
         button{margin: 3vh auto 0 auto; display: flex; border-radius: 6%; border: 2px solid #d8b532;background-color: #ecd65a;padding: 8px 12px;transition:0.2s;}
         button:hover{background-color: #816b4c; color: #f6e3c7; border: 2px solid #71634f; transform: scale(120%);}
+        .top a{text-decoration: none;}
+        .top a:hover{color:#f2ce1a;}
+        .top a::after{color: #f2ce1a;}
     </style>
 </body>
