--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="incluiG.php">
                     <button >Pedir G</button>
                 </a>
-                <a href="avaliar.php">
+                <a href="avalia.php">
                     <button>Avaliar</button>
                 </a>
             </div>
