--- a/inclui.html
+++ b/inclui.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laccio di Batte - Gelato P/M</title>
+    <title>Laccio di Batte | Gelato P/M</title>
 </head>
 <body>
     <header>
