--- a/incluiG.html
+++ b/incluiG.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laccio di Batte - Gelato G</title>
+    <title>Laccio di Batte | Gelato G</title>
 </head>
 <body>
     <header>
